--- a/products/templates/products/includes/add_to_cart_form.html
+++ b/products/templates/products/includes/add_to_cart_form.html
@@ -1,6 +1,6 @@
 <div class="row">
     <h5 class="center-align cyan-text text-darken-3">Add Product to Cart</h5>
-    <div class="col s12 card">
+    <div class="col s12">
         <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
             {% csrf_token %}
             <div class="row">
