--- a/static/css/base.css
+++ b/static/css/base.css
@@ -340,6 +340,14 @@ header nav {
     display: block;
 }
 
+.facts-table-container {
+    padding: 0 8% !important;
+}
+
+#add-to-cart-container {
+    padding: 2% 5%;
+}
+
 #other-images-slider .indicator-item {
     background-color: rgb(0 150 136 / 0.3) !important;
 }
@@ -384,6 +392,11 @@ header nav {
     line-height: unset;
 }
 
+.modal-decrement-qty, .modal-increment-qty {
+    width: 45px !important;
+    padding: 0 !important;
+}
+
 .modal .modal-content {
     padding: 10px;
 }
@@ -420,7 +433,7 @@ header nav {
 }
 
 .price-update-col {
-    width: 70px;
+    min-width: 70px;
 }
 
 .update-quantity-col .btn-flat {
