--- a/static/css/base.css
+++ b/static/css/base.css
@@ -46,6 +46,11 @@ p {
     margin-bottom: 0px;
 }
 
+.mx-20 {
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
 .mr-20 {
     margin-right: 20px;
 }
