--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -39,7 +39,7 @@
         </li>
     </ul>
 </div>
-<a href="{% url 'products' %}" class="btn-floating btn waves-effect waves-light deep-purple darken-3">Buy Now</a>
+<a id="buy-home-btn" href="{% url 'products' %}" class="btn-floating btn waves-effect waves-light deep-purple darken-3">Buy Now</a>
 <!-- Icon Description Section -->
 <div class="container">
     <div class="section">
@@ -164,7 +164,7 @@
                 <h5>Let us know leaving a review of our products!</h5>
             </div>
             <div class="row center">
-                <a href="{% url 'products' %}" id="download-button" class="btn-large waves-effect waves-light cyan darken-2">Get Started</a>
+                <a href="{% url 'products' %}" id="download-button" class="btn-large waves-effect waves-light deep-purple darken-3">Get Started</a>
             </div>
             <br><br>
         </div>
