--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -19,7 +19,7 @@
 <!-- Floating Fixed button: Actions -->
 <div class="fixed-action-btn hide-on-med-and-up">
     <span class="mr-20">Add To Cart</span>
-    <a id="add-to-cart-floating-btn" href="#add-to-cart-modal" class="btn-floating btn-large modal-trigger waves-effect waves-light cyan darken-2">
+    <a id="add-to-cart-floating-btn" href="#add-to-cart-modal" class="btn-floating btn-large modal-trigger waves-effect waves-light deep-purple darken-3">
         <i class="large material-icons">add_shopping_cart</i>
     </a>
 </div>
@@ -72,7 +72,7 @@
 <div class="container mt-20">
     <div class="row">
         <div class="col s12 center-align">
-            <a href="{% url 'products' %}" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i>Back To Products</a>
+            <a href="{% url 'products' %}" class="btn waves-effect waves-light deep-purple darken-3"><i class="material-icons left">chevron_left</i>Back To Products</a>
         </div>
     </div>
 </div>
