--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -132,7 +132,7 @@
 <div class="container">
     <div class="row">
         <div class="col s12 center-align">
-            <a href="{% url 'products' %}" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i>Back To Products</a>
+            <a href="{% url 'products' %}" class="btn waves-effect waves-light deep-purple darken-3"><i class="material-icons left">chevron_left</i>Back To Products</a>
         </div>
     </div>
     <hr class="mt-50">
@@ -204,7 +204,7 @@
                 <h5>Let us know leaving a review of our products!</h5>
             </div>
             <div class="row center">
-                <a href="{% url 'products' %}" id="download-button" class="btn-large waves-effect waves-light cyan darken-2">Get Started</a>
+                <a href="{% url 'products' %}" id="download-button" class="btn-large waves-effect waves-light deep-purple darken-3">Get Started</a>
             </div>
             <br><br>
         </div>
