--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -74,7 +74,7 @@
                                 <!-- A Stripe card element will go here -->
                                 <div class="" id="card-element"></div>
                                 <!-- Used to display form errors -->
-                                <div class="red-text" id="card-errors" role="alert"></div>
+                                <div class="red-text text-darken-3" id="card-errors" role="alert"></div>
                                 <!-- Pass the client secret to the view so we can get the payment intent id -->
                                 <input type="hidden" value="{{ client_secret }}" name="client_secret">
                             </div>
