--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -20,9 +20,9 @@
     border-bottom: 1px solid #9e9e9e;
     border-radius: 0;
     outline: none;
+    font-size: 1rem;
     height: 3rem;
     width: 100%;
-    font-size: 1rem;
     margin: 0 0 20px 0;
     padding: 0;
     -webkit-box-shadow: none;
@@ -41,6 +41,12 @@
 .StripeElement--invalid {
     border-bottom: 1px solid #d62703;
     box-shadow: 0 1px 0 0 #d62703;
+}
+
+.StripeElement--complete {
+    border-bottom: 1px solid #4CAF50;
+    -webkit-box-shadow: 0 1px 0 0 #4CAF50;
+    box-shadow: 0 1px 0 0 #4CAF50;
 }
 
 .StripeElement--webkit-autofill {
