added basic stripe functionality to checkout form and corrected css

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -80,7 +80,7 @@
                             </div>
                             <div class="card-action">
                                 <span class="icon teal-text text-darken-3">
-                                    <i class="fas fa-exclamation-circle"></i>
+                                    <i class="material-icons left">credit_card</i>
                                 </span>
                                 <span class="">Your card will be charged <strong class="teal-text text-darken-3">${{ grand_total|floatformat:2 }}</strong></span> 
                             </div>
