added checkout success view for complete order processes

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -56,7 +56,7 @@
                             </div>
                             <div class="card-action">
                                 {% if user.is_authenticated %}
-                                <input type="checkbox" class="filled-in teal darken-3" id="save-info-box" checked="checked" />
+                                <input type="checkbox" name="save_info" class="filled-in teal darken-3" id="save-info-box" checked="checked" />
                                 <label for="save-info-box">Save this delivery information to my profile</label>
                                 {% else %}
                                 <label class="form-check-label" for="id-save-info">
